bugfix: correção overflow html

--- a/styles/global.css
+++ b/styles/global.css
@@ -54,6 +54,7 @@ body {
 }
 
 html {
+    overflow-x: hidden;
     display: flex;
     font-family: var(--ff-sans);
     font-weight: var(--fw-base);
